--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,14 @@
 server:
-  port: 9010
+  port: 9020
   servlet:
-    context-path: /bootcamp51/ms/client
+    context-path: /bootcamp51/ms/product
 
 spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/bootcamp51?authSource=admin
 
-sonar:
-  host:
-    url: "http://XXX.XXX.X.XX:9000"
-  login: "XXXX"
-
-
-rutaApiClient: "http://localhost:9020/bootcamp51/ms/product"
+rutaApiClient: "http://localhost:9010/bootcamp51/ms/client"
 retryApiClient: 3
 timeIntervalApiClient: 3
+
